Add Lighthouse CI integration to project
Introduced Lighthouse CI by adding configuration files (.lighthouserc.cjs, .lighthouseci/flags-*.json), updating the GitHub Actions workflow to include a Lighthouse job, and installing @lhci/cli as a dev dependency. This enables automated performance and accessibility audits in the CI pipeline.

--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
     "type": "module",
     "scripts": {
         "build": "vite build",
-        "dev": "vite"
+        "dev": "vite",
+        "lhci:mobile": "lhci autorun",
+        "lhci:desktop": "lhci autorun --collect.settings.formFactor=desktop --collect.settings.screenEmulation.mobile=false"
     },
     "devDependencies": {
+        "@lhci/cli": "^0.15.1",
         "@tailwindcss/forms": "^0.5.2",
         "@tailwindcss/vite": "^4.0.0",
         "alpinejs": "^3.4.2",
