Add desktop Lighthouse CI to workflow and update reports
Updated the CI workflow to run both mobile and desktop Lighthouse CI audits. Added .lighthouserc.desktop.cjs and updated .gitignore for desktop temp files. Replaced Lighthouse assertion results and reports with new desktop run outputs.

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
         "build": "vite build",
         "dev": "vite",
         "lhci:mobile": "lhci autorun",
-        "lhci:desktop": "lhci autorun --collect.settings.formFactor=desktop --collect.settings.screenEmulation.mobile=false"
+        "lhci:desktop": "lhci autorun --config=./.lighthouserc.desktop.cjs"
     },
     "devDependencies": {
         "@lhci/cli": "^0.15.1",
