--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -59,5 +59,7 @@ jobs:
         run: npm ci
       - name: Build assets
         run: npm run build
-      - name: Run Lighthouse CI
+      - name: Run Lighthouse CI (Mobile)
         run: npm run lhci:mobile
+      - name: Run Lighthouse CI (Desktop)
+        run: npm run lhci:desktop
