feat: Add `tmp` package override to resolve potential dependency issues.

--- a/package.json
+++ b/package.json
@@ -31,5 +31,8 @@
         "jquery": "^3.7.1",
         "jszip": "^3.10.1",
         "pdfmake": "^0.2.20"
+    },
+    "overrides": {
+        "tmp": "^0.2.3"
     }
 }
