--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -109,19 +109,11 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        language: [ 'javascript-typescript', 'php' ] # Analizamos ambos lenguajes de tu proyecto Laravel
+        language: [ 'javascript' ] # CodeQL native support for JS/TS only
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-
-      - name: Setup PHP
-        if: matrix.language == 'php'
-        uses: shivammathur/setup-php@v2
-        with:
-          php-version: '8.2'
-          extensions: mbstring, xml, ctype, iconv, intl, sqlite3
-          coverage: none
 
       # Inicializa las herramientas de CodeQL
       - name: Initialize CodeQL
