--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "pdfmake": "^0.2.20"
     },
     "overrides": {
-        "tmp": "^0.2.3"
+        "tmp": "^0.2.3",
+        "qs": "^6.14.1"
     }
 }
