--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "vite": "^7.0.7"
     },
     "dependencies": {
+        "@tabler/icons": "^3.36.0",
         "datatables.net-bs5": "^2.3.5",
         "datatables.net-buttons-bs5": "^3.2.5",
         "datatables.net-dt": "^2.3.6",
