chore: exclude local libs from codeql scan

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -133,6 +133,7 @@ jobs:
         uses: github/codeql-action/init@v3
         with:
           languages: ${{ matrix.language }}
+          config-file: ./.github/codeql/codeql-config.yml
           # Puedes añadir consultas personalizadas aquí si lo deseas
           queries: security-extended,security-and-quality 
 
